Update ZINEDEF with optimized images

--- a/src/pages/works/ZINEDEF.mdx
+++ b/src/pages/works/ZINEDEF.mdx
@@ -18,14 +18,14 @@ tags: ["art", "design"]
 I created ZINEDEF[^1] during my mandatory military service in the Singapore Armed Forces. 60 pages, saddle-stitched with military provisions, printed on standard copier paper.
 
 <div className="image-container">
-  ![image](/assets/ZINEDEF/ZINEDEF_han.png)
-  ![image](/assets/ZINEDEF/ZINEDEF_abc.png)
-  ![image](/assets/ZINEDEF/ZINEDEF_milo.png)
-  ![image](/assets/ZINEDEF/ZINEDEF_expiry.png)
-  ![image](/assets/ZINEDEF/ZINEDEF_album.png)
-  ![image](/assets/ZINEDEF/ZINEDEF_ok.png)
-  ![image](/assets/ZINEDEF/ZINEDEF_eyes.png)
-  ![image](/assets/ZINEDEF/ZINEDEF_ord.png)
+  ![image](/assets/ZINEDEF/ZINEDEF_han.webp)
+  ![image](/assets/ZINEDEF/ZINEDEF_abc.webp)
+  ![image](/assets/ZINEDEF/ZINEDEF_milo.webp)
+  ![image](/assets/ZINEDEF/ZINEDEF_expiry.webp)
+  ![image](/assets/ZINEDEF/ZINEDEF_album.webp)
+  ![image](/assets/ZINEDEF/ZINEDEF_ok.webp)
+  ![image](/assets/ZINEDEF/ZINEDEF_eyes.webp)
+  ![image](/assets/ZINEDEF/ZINEDEF_ord.webp)
   ![image](/assets/works/ZINEDEF_stories.webp)
 </div>
 
