--- a/src/pages/works/g-r.mdx
+++ b/src/pages/works/g-r.mdx
@@ -25,8 +25,8 @@ In order of appearance:
 4. Louise Queen of Belgians by Franz Xaver Winterhalter (2017)
 
 <div className="image-container">
-  ![image](/assets/g-r/g-r_allegory.jpg)
-  ![image](/assets/g-r/g-r_flowers.jpg)
-  ![image](/assets/g-r/g-r_mercy.png)
-  ![image](/assets/g-r/g-r_louise.png)
+  ![image](/assets/g-r/g-r_allegory.webp)
+  ![image](/assets/g-r/g-r_flowers.webp)
+  ![image](/assets/g-r/g-r_mercy.webp)
+  ![image](/assets/g-r/g-r_louise.webp)
 </div>
