--- a/src/pages/works/g-r.mdx
+++ b/src/pages/works/g-r.mdx
@@ -14,15 +14,20 @@ tags: ["art"]
 
 <br />
 
-A collection of reproductions of paintings I like from the Renaissance and Romantic periods (I think), done in graphite.
+A collection of reproductions of paintings from the Rococo, Baroque, Realism and Romantic periods, done in graphite.
 
 <br/>
 
-In order of appearance:
-1. Allegory of Peace and War by Pompeo Batoni (2021)
-2. Still Life with Flowers by Rachel Ruysch (2021)
-3. Mercy Otis Warren by John Singleton Copley (2020)
-4. Louise Queen of Belgians by Franz Xaver Winterhalter (2017)
+In order of appearance:  
+
+<br/>
+
+| **Title & Year** | **Artist**      | **Repro'd** |
+| ----- | ----------- | ---------- |
+| Allegory of Peace and War, 1776 | Pompeo Batoni | 2021
+| Still Life with Flowers, 1690–1720 | Rachel Ruysch | 2021
+| Mercy Otis Warren, 1763 | John Singleton Copley | 2020
+| Louise Queen of Belgians, 1841 | Franz Xaver Winterhalter | 2017
 
 <div className="image-container">
   ![image](/assets/g-r/g-r_allegory.webp)
