--- a/src/pages/works/g-r.mdx
+++ b/src/pages/works/g-r.mdx
@@ -12,15 +12,9 @@ tags: ["art"]
 `2017–`
 `art`
 
-<br />
+A collection of reproductions of paintings from the Rococo, Baroque, Realism and Romantic periods, done in graphite.  
 
-A collection of reproductions of paintings from the Rococo, Baroque, Realism and Romantic periods, done in graphite.
-
-<br/>
-
-In order of appearance:  
-
-<br/>
+In order of appearance ⤵︎  
 
 | **Title & Year** | **Artist**      | **Repro'd** |
 | ----- | ----------- | ---------- |
