--- a/src/pages/works/misc.mdx
+++ b/src/pages/works/misc.mdx
@@ -13,9 +13,7 @@ tags: ["art", "design"]
 `art`
 `design`
 
-<br />
-
-A collection of various experiments in art and design that I feel should have a place somewhere.
+A collection of various experiments in art, design and type. 
 
 <div className="image-container">
   ![image](/assets/misc/misc_water.png)
