Updated with articles for all projects!

--- a/src/pages/works/g-r.mdx
+++ b/src/pages/works/g-r.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/Article.astro
 title: "Graphite Reproductions"
 pubDate: 2023-10-06
-description: "Graphite reproductions of paintings"
+description: "Graphite reproductions of various paintings."
 author: "Yihui Hu"
 tags: ["art"]
 ---
@@ -14,7 +14,7 @@ tags: ["art"]
 
 A collection of reproductions of paintings from the Rococo, Baroque, Realism and Romantic periods, done in graphite.  
 
-In order of appearance ⤵︎  
+In order of appearance:
 
 | **Title & Year** | **Artist**      | **Repro'd** |
 | ----- | ----------- | ---------- |
