--- a/src/pages/works/misc.mdx
+++ b/src/pages/works/misc.mdx
@@ -2,12 +2,12 @@
 layout: ../../layouts/Article.astro
 title: "Misc."
 pubDate: 2023-10-06
-description: "Miscellaneous design / art work over the years"
+description: "Miscellaneous design / art work over the years."
 author: "Yihui Hu"
 tags: ["art", "design"]
 ---
 
-## Miscellaneous design / art 
+## Miscellaneous Design / Art 
 
 `2016–`
 `art`
