--- a/src/pages/works/pokesearch.mdx
+++ b/src/pages/works/pokesearch.mdx
@@ -2,22 +2,27 @@
 layout: ../../layouts/Article.astro
 title: "pokéSearch"
 pubDate: 2023-12-06
-description: "A pared-back Pokédex"
+description: "A pared-back Pokédex."
 author: "Yihui Hu"
 tags: ["code"]
 ---
 
 ## pokéSearch
 
-`2022`
-`code`  
+`Jun 2022`
+`code`
 
-Built over a week during summer break in 2022, pokéSearch is a minimalist Pokédex that displays key information and trivia about a certain Pokémon / species, without the cruft of other popular encyclopedias like Bulbapedia or Serebii.  
+Built over a week during summer break in 2022, pokéSearch is a minimalist Pokédex that displays key information and trivia about a certain Pokémon / species, without the cruft of other popular encyclopedias like Bulbapedia or Serebii.
 
-It pulls in data from the publicly available [PokéAPI](https://pokeapi.co/), and was my first project[^1] completed in [React](https://react.dev/). View the project [here](https://pokesearch-simple.netlify.app).
+It pulls in data from the publicly available [PokéAPI](https://pokeapi.co/), and was my first project[^1] completed in [React](https://react.dev/). It's not the most polished or performant, but I'm still proud of it. View the project [here](https://pokesearch-simple.netlify.app).
 
 <div className="image-container">
+  ![image](/assets/pokesearch/pokesearch_main.webp)
+  ![image](/assets/pokesearch/pokesearch_mobile_spread.webp)
+  ![image](/assets/pokesearch/pokesearch_moves.webp)
   ![image](/assets/works/pokesearch_duo.webp)
+  ![image](/assets/pokesearch/pokesearch_all_info.webp)
+  ![image](/assets/pokesearch/pokesearch_mobile.webp)
 </div>
 
 ---
