--- a/src/pages/works/famicase.mdx
+++ b/src/pages/works/famicase.mdx
@@ -2,24 +2,24 @@
 layout: ../../layouts/Article.astro
 title: "Famicase"
 pubDate: 2023-10-06
-description: "Famicase submission no. 127 for 2022"
+description: "Famicase submission no. 127 for 2022."
 author: "Yihui Hu"
 tags: ["art", "design"]
 ---
 
 ## Famicase
 
-`2022`
+`Mar 2022`
 `art`
 `design`
 
 ```md
-Published – 28 April, 2022
+Originally published on 28 April, 2022
 ```
 
-The 2022 Famicase exhibition just went live.  
+The 2022 [Famicase exhibition](https://famicase.com) just went live.  
 
-I've always wanted to participate after seeing my favourite graphic designers' works on there. But honestly I'd forgotten all about it until I saw a tweet saying that submissions opened up on March 1st. I heard that slots fill up quickly, so I spent the afternoon rehashing some old concepts/work to put together an entry.  
+I've always wanted to participate after seeing my [favourite](https://coryschmitz.com/My-Famicase-Exhibition) [graphic](https://jeffwiggins.co/My-Famicase-Exhibition) [designers'](https://natking.design/My-Famicase-Exhibition) [works](https://arkotype.co/project/famicase) on there. But honestly I'd forgotten all about it until I saw a tweet saying that submissions opened up on March 1st. I heard that slots fill up quickly, so I spent the afternoon rehashing some old concepts/work to put together an entry.  
 
 On hindsight, I would have spent the time developing an entirely new idea, but I didn't want to miss out on the submission. It didn't fill up until after a few weeks, so I definitely could have done so. Well, I did have my mid-term exams then, so...  
 
@@ -49,7 +49,7 @@ My entry is no. 127.
 Photos by [@morita_tsuyoshi](https://twitter.com/morita_tsuyoshi) and [@meteor_club](https://twitter.com/meteor_club).
 
 ```md
-Addendum – 10 June, 2023
+Addendum added on 10 June, 2023
 ```
 
 Unfortunately, I missed out on this year's Famicase exhibition – slots filled up way quicker than last year's. But I'll be sure to submit something next year, and I'll update this page when I do!  
