--- a/src/pages/works/goodreads.mdx
+++ b/src/pages/works/goodreads.mdx
@@ -2,14 +2,14 @@
 layout: ../../layouts/Article.astro
 title: "Goodreads"
 pubDate: 2023-10-06
-description: "An exploration / refinement of the Goodreads iOS app"
+description: "An exploration / refinement of the Goodreads iOS app."
 author: "Yihui Hu"
 tags: ["design"]
 ---
 
 ## Goodreads
 
-`2021`
+`Dec 2021`
 `art`
 `design`
 
@@ -22,7 +22,7 @@ In the process of swapping Sketch for Figma in my workflow, I decided to recreat
   ![image](/assets/goodreads/goodreads_details.jpg)
 </div>
 
-<video controls autoplay>
+<video controls autoplay style={{width: "100%"}}>
   <source
     src="/assets/goodreads/goodreads_demo.mp4"
     type="video/mp4"
