Updated with articles for all projects!

--- a/src/pages/works/ZINEDEF.mdx
+++ b/src/pages/works/ZINEDEF.mdx
@@ -13,7 +13,9 @@ tags: ["art", "design"]
 `art`
 `design`
 
-ZINEDEF[^1] is a 60-page zine that documents the moments, experiences, stories and everything in between that I accumulated during my time in the army. Saddle-stitched with military provisions and printed on standard copier paper, I worked on it on and off for about two years—the duration of my mandatory military service in the Singapore Armed Forces.  
+ZINEDEF[^1] is a 60-page zine that documents the moments, experiences, stories and everything in between that I accumulated during my time in the army. 
+
+Saddle-stitched with military provisions and printed on standard copier paper, I worked on it on and off for about two years—the duration of my mandatory military service in the Singapore Armed Forces.  
 
 Below are some sample spreads from the project[^2] ⤵︎
 
@@ -32,4 +34,4 @@ Below are some sample spreads from the project[^2] ⤵︎
 ---
 
 [^1]: Portmanteau of zine and MINDEF (Ministry of Defence Singapore).
-[^2]: I only made a small batch of 20 zines and sold it to friends for charity. But if you'd like a digital copy of ZINEDEF, please reach out to me via yyihui.hu (at) gmail (dot) com. I'd be more than happy to share a copy with you.
+[^2]: I previously made a small batch of 20 zines and sold it to friends for charity. I don't plan to make any more physical copies, but if you'd like a digital copy of ZINEDEF, please reach out to me via yyihui.hu (at) gmail (dot) com. I'd be more than happy to share a copy with you.
