Updated details for 20XX

--- a/src/pages/works/20XX.mdx
+++ b/src/pages/works/20XX.mdx
@@ -12,13 +12,13 @@ tags: ["art"]
 `Jan 2020`
 `art`
 
-Animation exploring the documentation/preservation of nature in a post climate change world. Submitted for admission to the [Rhode Island School of Design](https://risd.edu) as part of the 2020 application cycle.
+Video illustration exploring the documentation / preservation of nature in a post climate change world. Submitted for admission to the [Rhode Island School of Design](https://risd.edu) as part of the 2020 application cycle.
 
 The prompt:
 
 > Begin by observing a phenomenon or choosing an object in the natural world. Create a visual reaction to this object or phenomenon. You may use any medium and work at any scale. Document this work and upload it as your first response. <br/><br/> Then, make a transformation to or modification of your first response. We encourage you to impose no limits to the potential nature or scale of the alteration to your first solution. Document this altered work and upload it as your second response.
 
-View the full illustrated animation [here](https://vimeo.com/387245848).
+View the full video [here](https://vimeo.com/387245848).
 
 <div className="image-container">
   ![image](/assets/20XX/20XX_main.gif)
