Minor changes to articles

--- a/src/pages/works/everyday__.mdx
+++ b/src/pages/works/everyday__.mdx
@@ -35,7 +35,7 @@ I don't create as much art nowadays, but I follow essentially the same practice 
     ![image](/assets/everyday__/everyday_news.webp)
 </div>
 
-I can't say I remember exactly what I was trying to achieve with this body of work at the time. And honestly, reading the old curatorial rationale now, I'm not sure I knew back then either. But I feel the last line from the rationale sums up the exhibition well enough:
+I can't say I remember exactly what I was trying to achieve with this body of work. And honestly, reading the old curatorial rationale now, I'm not sure I knew back then either. But I feel the last line from the rationale sums up the exhibition well enough:
 
 > *...rather, the emphasis is on how anyone is able to use, transform and manipulate any given [medium, style, subject matter, etc.] to grant old narratives new meaning. The exhibition therefore implores the audience to similarly find and reinvigorate their own sense of curiosity within their own lives, which I find important in our increasingly hustle-and-bustle society.*
 
