--- a/src/pages/works/ZINEDEF.mdx
+++ b/src/pages/works/ZINEDEF.mdx
@@ -15,7 +15,7 @@ tags: ["art", "design"]
 
 ZINEDEF[^1] is a 60-page zine that documents the moments, experiences, stories and everything in between that I accumulated during my time in the army. 
 
-Saddle-stitched with military provisions and printed on standard copier paper, I worked on it on and off for about two years—the duration of my mandatory military service in the Singapore Armed Forces.  
+Saddle-stitched with military provisions and printed on standard copier paper, I worked on it on and off for about two years—the duration of mandatory military service in the Singapore Armed Forces.  
 
 Below are some sample spreads from the project[^2] ⤵︎
 
