Added credits and collaborators

--- a/src/pages/works/f-c-d.mdx
+++ b/src/pages/works/f-c-d.mdx
@@ -16,6 +16,8 @@ tags: ["code", "design"]
 
 Watch this space... 👀 👍
 
+A collaboration with [Christina](https://christinalj.com).
+
 <div className="image-container">
   ![image](/assets/f-c-d/f-c-d.webp)
 </div>
