--- a/src/pages/works/y0p.mdx
+++ b/src/pages/works/y0p.mdx
@@ -17,6 +17,8 @@ Pushing the boundaries of human communication on the web through highlighting te
 
 Don't read too much into it and just [have fun](https://y0p.vercel.app) :0) or view the [source code](https://github.com/yihui-hu/y0p).
 
+Inspired by the original [yop](https://fichtre.net/yop).
+
 <div className="image-container">
   ![image](/assets/works/y0p_veiled.webp)
   ![image](/assets/y0p/y0p.webp)
